--- a/askadia.css
+++ b/askadia.css
@@ -193,6 +193,87 @@ transform: rotate(90deg);
     background: #fff;
     border: 2px solid #000;
 }
+.sec2{
+    display: flex;
+}
+.column{
+    background-color: #E8E6DF;
+    flex: 0 0 50%;
+}
+h1{
+/*font-family: Roboto;
+font-style: normal;*/
+font-weight: bold;
+font-size: 24px;
+line-height: 28px;
+align-items: center;
+text-align: center;
+margin: 37px 92px 20px 95px;
+color: #000000;
+
+}
+#text{
+/*  font-family: Roboto;*/
+/*font-style: normal;*/
+font-weight: bold;
+font-size: 12px;
+line-height: 14px;
+align-items: center;
+text-align: center;
+padding: 13px 21px 13px 86px;
+color: #000000;
+}
+#sec2-img{
+padding: 37px 83px 28px 21px;
+width: 502px;
+height: 406px;
+}
+
+.background{
+    background: white;
+}
+.new{
+    overflow: hidden;
+}
+.new .nav-tabs{
+    border:0;
+
+}
+.new .nav-link{
+    border:0;
+    padding: 5px 15px;
+    transition: 0.3s;
+    color:black;
+/*    border-radius: 0;*/
+    border-right:2px solid var(--mainColor);
+    font-weight: 600;
+    font-size:15px;
+}
+.new .nav-link:hover{
+    color:var(--mainColor);
+    border-color: var(--mainColor);
+}
+.new .nav-link.active{
+    color:#000;
+    background-color: var(--mainColor);
+    border-color: var(--mainColor);
+}
+
+
+.new .tab-pane.active{
+    animation:fadeIn 0.5s ease-out;
+}
+.new .details p{
+    color:black;
+
+}
+.new .details p:last-child{
+    margin-bottom:0;
+}
+.tab-content{
+align-items: center;
+text-align: center;
+}
 
 .sub-footer{
     margin-top: 30px;
